Add dark mode toggle

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <script>
+      const darkmode = JSON.parse(localStorage.getItem('darkmode'));
+      darkmode
+        ? document.documentElement.classList.add('dark')
+        : document.documentElement.classList.remove('dark');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechMint | Mobile Store</title>
   </head>
